--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,23 @@ jwt.secret=somu
 
 #local
 
-#server.port=9899
-#spring.datasource.url= jdbc:mysql://localhost:3306/taskmanager?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+server.port=9899
+spring.datasource.url= jdbc:mysql://localhost:3306/taskmanager?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #server
 #`heroku_270a62aeb41cbed`.`manage` 
 
-spring.datasource.url= jdbc:mysql://us-cdbr-east-02.cleardb.com:3306/heroku_270a62aeb41cbed?useSSL=false
-spring.datasource.username=bb2f36016f2f68
-spring.datasource.password=fcae7492
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.datasource.hikari.max-lifetime=900000
-spring.datasource.hikari.idle-timeout=300000
+#spring.datasource.url= jdbc:mysql://us-cdbr-east-02.cleardb.com:3306/heroku_270a62aeb41cbed?useSSL=false
+#spring.datasource.username=bb2f36016f2f68
+#spring.datasource.password=fcae7492
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.hikari.max-lifetime=900000
+#spring.datasource.hikari.idle-timeout=300000
 
 # spring Email
 spring.mail.host=smtp.gmail.com
